--- a/src/index.css
+++ b/src/index.css
@@ -291,6 +291,27 @@ ol {
 img {
   display: block;
   max-width: 100%;
-  width: 100%;
+  /* width: 100%; */
   height: auto;
+}
+.statistics {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 20px;
+}
+
+.friend-list {
+  display: flex;
+
+  margin-top: 20px;
+}
+
+.name {
+  text-align: center;
+  font-weight: 600;
+}
+
+.avatar {
+  box-shadow: 17px 18px 15px -5px rgba(68, 67, 67, 0.75);
 }
